--- a/SampleWebBlog/SampleWebBlog.csproj
+++ b/SampleWebBlog/SampleWebBlog.csproj
@@ -185,6 +185,7 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\Registrasi.cshtml" />
+    <Content Include="Views\Home\FormRegistrasi.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
