--- a/SampleWebBlog/SampleWebBlog.csproj
+++ b/SampleWebBlog/SampleWebBlog.csproj
@@ -189,6 +189,7 @@
     <Content Include="Views\Home\Registrasi.cshtml" />
     <Content Include="Views\Home\FormRegistrasi.cshtml" />
     <Content Include="Views\Mahasiswa\Index.cshtml" />
+    <Content Include="Views\Mahasiswa\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
