--- a/SampleWebBlog/SampleWebBlog.csproj
+++ b/SampleWebBlog/SampleWebBlog.csproj
@@ -190,6 +190,7 @@
     <Content Include="Views\Home\FormRegistrasi.cshtml" />
     <Content Include="Views\Mahasiswa\Index.cshtml" />
     <Content Include="Views\Mahasiswa\Create.cshtml" />
+    <Content Include="Views\Mahasiswa\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
