menambahkan category DAL

--- a/SampleWebBlog/Web.config
+++ b/SampleWebBlog/Web.config
@@ -5,7 +5,8 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="BootcampDbConnectionString" connectionString="Data Source=.\;Initial Catalog=BootcampDb;Integrated Security=True"
+    <add name="BootcampDbConnectionString"
+         connectionString="Data Source=.\;Initial Catalog=BootcampDb;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
