--- a/SampleWebBlog/SampleWebBlog.csproj
+++ b/SampleWebBlog/SampleWebBlog.csproj
@@ -141,6 +141,7 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\CategoryController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\MahasiswaController.cs" />
     <Compile Include="DAL\CategoryDAL.cs" />
@@ -194,6 +195,7 @@
     <Content Include="Views\Mahasiswa\Create.cshtml" />
     <Content Include="Views\Mahasiswa\Edit.cshtml" />
     <Content Include="Views\Mahasiswa\Delete.cshtml" />
+    <Content Include="Views\Category\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
